@@ -1,6 +1,6 @@
 package xyz.heroesunited.heroesunited.hupacks.js.item;
 
-import jdk.nashorn.api.scripting.NashornScriptEngine;
+import org.openjdk.nashorn.api.scripting.NashornScriptEngine;
 import xyz.heroesunited.heroesunited.common.abilities.IAbilityProvider;
 
 public interface IJSItem extends IAbilityProvider {
